--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "koa-router": "^12.0.0",
     "koa-static-server": "^1.5.2",
     "passport-http": "^0.3.0",
+    "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.0"
   },
   "devDependencies": {
